k8s/canary/spring-boot-probes-v2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-boot-probes
  name: spring-boot-probes-svc-v2
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: spring-boot-probes
    version: v2.0.0
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: spring-boot-probes-v2
  labels:
    app: spring-boot-probes
spec:
  replicas: 8
  minReadySeconds: 120
  selector:
    matchLabels:
      app: spring-boot-probes
      version: v2.0.0
  template:
    metadata:
      labels:
        app: spring-boot-probes
        version: v2.0.0
    spec:
      containers:
      - name: spring-boot-probes
        image: registry.cn-hangzhou.aliyuncs.com/log-service/spring-boot-probes:1.0.0
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 400Mi
          requests:
            cpu: 200m
            memory: 200Mi
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 3
